프로젝트 삭제 기능 추가 테스트 완료